--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,25 @@
 @tailwind utilities;
 
 .sidebar-link.active {
-    @apply border-blue-600 bg-slate-100
+    @apply border-blue-600 bg-slate-100 text-blue-600
+}
+
+.sidebar-link.active svg {
+    @apply fill-blue-600
+}
+
+.sidebar-link.active svg {
+    @apply fill-blue-600
+}
+
+.h1 {
+    @apply text-3xl font-semibold
+}
+
+.btn-default {
+    @apply flex items-center bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 px-4 border border-blue-700 rounded
+}
+
+.btn-transparent {
+    @apply flex items-center bg-transparent hover:bg-blue-600 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded
 }
