--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,40 @@
 @tailwind components;
 @tailwind utilities;
 
+/* полоса прокрутки (скроллбар) */
+::-webkit-scrollbar {
+    width: 7px; /* ширина для вертикального скролла */
+    height: 5px; /* высота для горизонтального скролла */
+}
+
+/* ползунок скроллбара */
+::-webkit-scrollbar-thumb {
+    background-color: #2563EB;
+    border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #2563EB;
+}
+
+/* Стрелки */
+
+::-webkit-scrollbar-button:vertical:start:decrement {
+    display: none;
+}
+
+::-webkit-scrollbar-button:vertical:end:increment {
+    display: none;
+}
+
+::-webkit-scrollbar-button:horizontal:start:decrement {
+    display: none;
+}
+
+::-webkit-scrollbar-button:horizontal:end:increment {
+    display: none;
+}
+
 .sidebar-link.active {
     @apply border-blue-600 bg-slate-100 text-blue-600
 }
