--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
+
+@layer base {
+  body {
+    font-family: 'Inter', sans-serif;
+    @apply bg-[#FAFBFC] dark:bg-[#000000]
+  }
+}
+
 /* полоса прокрутки (скроллбар) */
 ::-webkit-scrollbar {
   width: 7px; /* ширина для вертикального скролла */
