--- a/src/modal/style.css
+++ b/src/modal/style.css
@@ -1,5 +1,19 @@
 .modal {
+  
+  position: relative;
+}
+
+.modal::before {
+  position: absolute;
+  content: '';
   background-color: rgba(0, 0, 0, 0.4);
+  width: 100%;
+  height: 100%;
+  -webkit-filter: blur(5px);
+  -moz-filter: blur(5px);
+  -o-filter: blur(5px);
+  -ms-filter: blur(5px);
+  filter: blur(5px);
 }
 
 .modal.active {
